--- a/base.css
+++ b/base.css
@@ -1,38 +1,151 @@
-html, body {
+html,
+body {
     margin: 0;
 }
+
+:root {
+    --dark-green: #166C67;
+    --light-green: #1CB575;
+}
+
 body {
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
 .wrapper {
     width: 1200px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
-    background-color: aquamarine;
 }
+
 .main {
     display: flex;
     flex-flow: column;
     width: 85%;
 }
-.menu {
-    width: 15%;
-    background-color: aqua;
-    padding: 10px 20px 0px;
-}
+
 .header {
     background-color: rgb(5, 108, 108);
-    min-height: 150px;
+    height: 90vh;
 }
+
+.menu {
+    width: 15%;
+    background-color: transparent;
+    padding: 10px 20px 0px;
+    height: max-content;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.menu ul {
+    display: flex;
+    gap: 20px;
+}
+
 .content {
     background-color: white;
     min-height: 300px;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
 }
+
+.content ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 40px;
+    padding: 0;
+    margin: 2rem 0 5rem;
+}
+
+.content ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 180px;
+    text-align: center;
+    font-size: .8rem;
+}
+
+.content li img {
+    width: 100px;
+    height: 100px;
+}
+
+.content p:first-of-type,
+.content p:last-of-type {
+    color: var(--dark-green);
+    font-size: 1.2rem;
+    max-width: 65%;
+    text-align: center;
+}
+
+.content p:last-of-type {
+    width: 40%;
+}
+
+.banner {
+    width: 100%;
+    height: 15rem;
+    margin: 2rem 0 3rem;
+}
+
+.banner img {
+    width: 100%;
+    height: 100%;
+}
+
+.content button {
+    background-color: var(--light-green);
+    text-transform: uppercase;
+    border: none;
+    border-radius: 20px;
+    padding: 15px 25px;
+    margin-bottom: 30px;
+}
+
 .footer {
-    background-color: rgb(99, 56, 240);
+    background-color: var(--light-green);
+    color: white;
     min-height: 150px;
+    display: flex;
+    justify-content: space-around;
+    padding: 2rem;
+}
+
+.footer img {
+    width: 30%;
+}
+
+.footer address {
+    width: 40%;
+    font-size: 1.2rem;
+    word-spacing: 5px;
 }
