--- a/base.css
+++ b/base.css
@@ -44,7 +44,7 @@ li {
 
 .header {
     background-color: rgb(5, 108, 108);
-    height: 90vh;
+    height: 400px;
 }
 
 .menu {
@@ -129,6 +129,53 @@ li {
     border-radius: 20px;
     padding: 15px 25px;
     margin-bottom: 30px;
+}
+
+.content form {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+.content form label {
+    margin: 2rem .8rem .5rem;
+}
+
+.content form input {
+    width: 50%;
+    padding: 10px;
+    border-radius: 20px;
+    border: none;
+    background-color: #f1f1f1;
+}
+
+.content form input::placeholder {
+    font-size: .7rem;
+}
+
+
+.content textarea {
+    border: none;
+    border-radius: 20px;
+    background-color: #f1f1f1;
+    margin-bottom: 3rem;
+}
+
+.content button {
+    width: max-content;
+    color: white;
+    cursor: pointer;
+}
+
+.content iframe {
+    margin: 2rem 0;
+}
+
+.info-contact {
+    display: flex;
+    gap: 50px;
+    color: var(--dark-green);
+    margin: 2rem 0;
 }
 
 .footer {
